--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
                       Use this to match any server-side transformations that will be done after submitting the data, for a more consistent user experience.
                     </p>
                     <h3>HTML</h3>
-                    <xmp><input name='tags5' value='tag1, tag 2, tag THREE!, tag for is too long'></xmp>
+                    <xmp><input name='tags5' value='tag1, tag 2, tag THREE!, tag four is too long'></xmp>
                     <h3>Javascript</h3>
                     <script>
                         renderPRE(document.currentScript, "tag-sanitizer")
                     </script>
                 </aside>
                 <aside class='rightSide'>
-                    <input name='tags5' value='tag1, tag 2, tag THREE!, tag for is too long'>
+                    <input name='tags5' value='tag1, tag 2, tag THREE!, tag four is too long'>
                 </aside>
             </section>
 
