--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 padding: 1em;
                 color: white;
                 border-bottom-left-radius: 6px;
-                transform: translatex(100%);
+                transform: translatex(100.5%);
                 transition: .45s cubic-bezier(.65,0,.35,1);
             }
 
@@ -275,8 +275,19 @@
                 </div>
                 <div>
                     <span class='key'>tag-inset-shadow-size <small>(em)</small></span>
-                    <input type="range" name="tag-inset-shadow-size" style='flex:1' min="0" max="2" step="0.1" value="1.1">
+                    <input type="range" name="tag-inset-shadow-size" data-units='em' style='flex:1' min="0" max="2" step="0.1" value="1.1">
                 </div>
+
+                <div>
+                    <span class='key'>tag--min-width</span>
+                    <input type="range" name="tag--min-width" data-units='ch' style='flex:1' min="0" max="20" step="1" value="1">
+                </div>
+                <div>
+                    <span class='key'>tag--max-width</span>
+                    <input type="range" name="tag--max-width" data-units='ch' style='flex:1' min="1" max="20" step="1" value="auto">
+                </div>
+
+
                 <div>
                     <span class='key'>tag-bg</span>
                     <input type='color' name='tag-bg' value="#E5E5E5" />
@@ -353,11 +364,11 @@
                     <h2><a href='#section-input'>#</a>text input</h2>
                     <h3>In this example:</h3>
                     <ul>
-                        <li>Input attributes that affects Tagify</li>
                         <li>Tagify instance with settings (whitelist sugegstions)</li>
+                        <li>Simulate fetching whitelist (from a server) as the user is typing</li>
                         <li>Remove all tags from an extrenal button</li>
                         <li>Listen to Tagify events (add, remove, input, edit, invalid, click, dropdown)</li>
-                        <li>Un-listen to specific event (see `onAddTag` function)</li>
+                        <li>Un-listen to specific event (see <code>onAddTag</code> function)</li>
                     </ul>
                     <h3>Intro:</h3>
                     <p>
@@ -368,6 +379,8 @@
                         Note that <code>whitelist</code> &amp; <code>blacklist</code> may also be set on to <i>Tagify</i> as <code>data-</code> attributes on the input tag itself
                         as a list of tags seperated by the same delimeter defined in the Tagify's configuration. Default is comma (<code>,</code>)
                     </p>
+                    <p>As text is typed, the <code>onInput</code> Tagify event is fired, on each key stroke. Reseting the current whitelist and fecthing a new one (from <code>mockAjax()</code>)</p>
+                    <p>In real-life scenarios, a developer might wish to use different <em>whitelists</em> suggested to the user, according to the typed text, asusming the possibilities are too large to load at-once as the inital <em>whitelist</em>.</p>
                     <h3>HTML</h3>
 <pre class="language-markup"><code><&#8203;input
     name='input'
@@ -767,14 +780,15 @@
             function onTagifyStyleSettings(e){
                 var value = e.target.value,
                     name = e.target.name,
+                    units = e.target.dataset.units,
                     rules;
 
                 try{
                     if( name == 'tag-pad' )
                         value = `${document.querySelector('#tag-pad-v').value}em ${document.querySelector('#tag-pad-h').value}em`
 
-                    else if( name == 'tag-inset-shadow-size' )
-                        value += 'em'
+                    else if( units )
+                        value += units
 
                     rules = [...document.styleSheets[2].cssRules].find(x => x.selectorText == '.tagify');
                     rules.style.setProperty("--" + name, value)
@@ -799,11 +813,12 @@ new Tagify(input)
 (function(){
 
 var input = document.querySelector('input[name=input]'),
+    whitelist = ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
 
     // init Tagify script on the above inputs
     tagify = new Tagify(input, {
         // after 2 characters typed, all matching values from this list will be suggested in a dropdown
-        whitelist : ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"]
+        whitelist: [].concat(whitelist)
     })
 
 
@@ -824,6 +839,17 @@ tagify.on('add', onAddTag)
       .on('dropdown:hide', onDropdownHide)
       .on('dropdown:select', onDropdownSelect)
 
+var mockAjax = (function mockAjax(){
+    var timeout;
+    return function(duration){
+        clearTimeout(timeout); // abort last request
+        return new Promise(function(resolve, reject){
+            console.log(3434343, whitelist, tagify)
+            timeout = setTimeout(resolve, duration || 1000, whitelist)
+        })
+    }
+})()
+
 // tag added callback
 function onAddTag(e){
     console.log("onAddTag: ", e.detail);
@@ -841,6 +867,16 @@ function onRemoveTag(e){
 function onInput(e){
     console.log(e.detail);
     console.log("onInput: ", e.detail);
+
+    // get new whitelist from some async request (mocked)
+    tagify.settings.whitelist.length = 0;
+
+    mockAjax()
+        .then(function(result){
+            /// https://stackoverflow.com/q/30640771/104380
+            Array.prototype.splice.apply(tagify.settings.whitelist, tagify.settings.whitelist.concat(result))
+            tagify.dropdown.show.call(tagify, e.detail.value); // render the suggestions dropdown
+        })
 }
 
 function onTagEdit(e){
