--- a/test/test.html
+++ b/test/test.html
@@ -94,7 +94,7 @@
     <body>
         <form>
             <section id='section-basic'>
-                <input name='tags' class='some_class_name' placeholder='write some tags' value='css, html, javascript, css' autofocus data-blacklist='.NET,PHP'>
+                <input name='tags' class='some_class_name' placeholder='write some tags' value='xxx' autofocus data-blacklist='.NET,PHP'>
                 <input name='value_empty_JSON' class='value_empty_JSON' value='[]'>
                 <input name='value_JSON' class='value_JSON' value='[{"value":"foo"}, {"value":"bar", "title":"xxx"}]'>
             </section>
@@ -106,7 +106,7 @@
             <section id='section-mix'>
                 <textarea name='simple-mix'>[[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
                 <textarea name='mix'>
-                    [[{"id":101, "value":"cartman", "title":"Eric Cartman"}]] and [[{"id":500, "value":"cartman", "title":"xxx"}]] [[kyle]] do not know [[homer simpson]] because he's a relic. [[{"id":500, "value":"cartman", "title":"xxx"}]]
+                  [[{"id":101, "value":"cartman", "title":"Eric Cartman"}]] and [[{"id":500, "value":"cartman", "title":"xxx"}]] [[kyle]] do not know [[homer simpson]] because he's a relic.]]
                 </textarea>
             </section>
 
@@ -140,15 +140,15 @@
   document.forms[0].reset()
 
   window.tagified = {
-    "basic": 0,
-    "textarea": 0,
-    "mix": 1,
-    "manual-suggestions": 0,
-    "outside-of-the-box": 0,
-    "advance-options": 0,
-    "extra-properties": 0,
-    "readonly": 0,
-    "readonly-mixed": 0,
+    "basic"             : 1,
+    "textarea"          : 1,
+    "mix"               : 1,
+    "manual-suggestions": 1,
+    "outside-of-the-box": 1,
+    "advance-options"   : 1,
+    "extra-properties"  : 1,
+    "readonly"          : 1,
+    "readonly-mixed"    : 1,
   };
 
   (function(){
@@ -162,49 +162,70 @@
 
 <script data-name="basic">
   tagified["basic"] && (function(){
-    new Tagify(document.querySelector('input[name=value_empty_JSON]'))
-    new Tagify(document.querySelector('input[name=value_JSON]'))
+    var sectionElm = document.querySelector('#section-basic');
 
-    var input = document.querySelector('input[name=tags]');
+    new Tagify(sectionElm.querySelector('input[name=value_empty_JSON]'))
+    new Tagify(sectionElm.querySelector('input[name=value_JSON]'))
 
-        // init Tagify script on the above inputs
-    window.tagify__basic = new Tagify(input, {
-            whitelist : ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
-            blacklist : [".NET", "PHP"], // <-- passed as an attribute in this demo
-            dropdown : {
-                classname: "basicDropdown"
-            }
-        })
+    var input = sectionElm.querySelector('input[name=tags]');
+    var whitelist = ['aaabc', 'aaacb', 'aaabb', 'bbbbc', 'cccbd', 'dddbe', 'eeec', 'fffcc'];
+
+    // init Tagify script on the above inputs
+    var tagify = new Tagify(input, {
+        // after 2 characters typed, all matching values from this list will be suggested in a dropdown
+        // whitelist: [].concat(whitelist)
+    })
 
 
-    // Chainable event listeners
-    tagify__basic
-        .on('add', onAddTag)
+  // Chainable event listeners
+  tagify.on('add', onAddTag)
         .on('remove', onRemoveTag)
         .on('input', onInput)
         .on('edit', onTagEdit)
         .on('invalid', onInvalidTag)
         .on('click', onTagClick)
+        .on('focus', onTagifyFocusBlur)
+        .on('blur', onTagifyFocusBlur)
         .on('dropdown:show', onDropdownShow)
         .on('dropdown:hide', onDropdownHide)
+        .on('dropdown:select', onDropdownSelect)
 
-    // tag added callback
-    function onAddTag(e){
-        console.log("onAddTag: ", e.detail);
-        console.log("original input value: ", input.value)
-        tagify__basic.off('add', onAddTag) // exmaple of removing a custom Tagify event
-    }
+  var mockAjax = (function mockAjax(){
+      var timeout;
+      return function(duration){
+          clearTimeout(timeout); // abort last request
+          return new Promise(function(resolve, reject){
+              timeout = setTimeout(resolve, duration || 1000, whitelist)
+          })
+      }
+  })()
 
-    // tag remvoed callback
-    function onRemoveTag(e){
-        console.log(e.detail);
-        console.log("tagify instance value:", tagify__basic.value)
-    }
+  // tag added callback
+  function onAddTag(e){
+      console.log("onAddTag: ", e.detail);
+      console.log("original input value: ", input.value)
+      tagify.off('add', onAddTag) // exmaple of removing a custom Tagify event
+  }
 
-    // on character(s) added/removed (user is typing/deleting)
-    function onInput(e){
-        console.log(e.detail);
-        console.log("onInput: ", e.detail);
+  // tag remvoed callback
+  function onRemoveTag(e){
+      console.log(e.detail);
+      console.log("tagify instance value:", tagify.value)
+  }
+
+  // on character(s) added/removed (user is typing/deleting)
+  function onInput(e){
+    console.log("onInput: ", e.detail);
+
+    // get new whitelist from some async request (mocked)
+    mockAjax()
+        .then(function(result){
+          tagify.settings.whitelist.length = result.length;
+            /// https://stackoverflow.com/q/30640771/104380
+            tagify.settings.whitelist.splice(0, result.length, ...result)
+            // render the suggestions dropdown
+            tagify.dropdown.show.call(tagify, e.detail.value);
+        })
     }
 
     function onTagEdit(e){
@@ -222,6 +243,10 @@
         console.log("onTagClick: ", e.detail);
     }
 
+    function onTagifyFocusBlur(e){
+        console.log(e.type, "event fired")
+    }
+
     function onDropdownShow(e){
         console.log("onDropdownShow: ", e.detail)
     }
@@ -230,6 +255,9 @@
         console.log("onDropdownHide: ", e.detail)
     }
 
+    function onDropdownSelect(e){
+        console.log("onDropdownSelect: ", e.detail)
+    }
     })()
 </script>
 
