--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           .forkLink img{ width:100%; }
 
           section{ display:flex; }
-          aside{ padding:3em; box-sizing:border-box; width:50%; }
+          aside{ padding:4rem; box-sizing:border-box; width:50%; }
           section > .leftSide{   }
           section > .rightSide{  }
 
@@ -35,10 +35,12 @@
             white-space: pre;
           }
 
-          .leftSide h2{ position:relative; text-transform:uppercase; font-size:2em; margin-top:0; }
+          .leftSide{ padding-top:0; }
+          .leftSide h2{ padding-top:4rem; background:#F3F3F3; color:#DB2C6F; text-transform:capitalize; font-size:2em; margin-top:0; line-height:.9; margin-bottom:0; }
           .leftSide h2 > a{ position:absolute; transform:translateX(-150%); text-decoration:none; color:#AAA; font-weight:normal; }
 
-          h3{ color:#777; font-size:1.2em; margin:0 0 5px; }
+          h3{ color:#2CB2DB; font-size:1.2em; margin:2rem 0 .5em; text-transform:capitalize; }
+          h3:first-child{ margin-top:4.3rem; }
           xmp, pre{ white-space:normal; padding:8px; background:white; color:navy; border-radius:4px; }
           pre{ white-space:pre; overflow:auto; }
 
@@ -61,6 +63,11 @@
 
           .forkLink{ position:absolute; top:.7em; right:50%; transform:translateX(50%); }
           body > header{
+              position: fixed;
+              z-index: 100;
+              top: 0;
+              left: 0;
+              right: 0;
               display: flex;
               align-items: center;
               background:white;
@@ -361,6 +368,52 @@
                 </aside>
             </section>
 
+              <section id='section-dropdown-tags'>
+                <aside class='leftSide'>
+                    <h3>Same using custom suggestions:</h3>
+                    <p>The dropdown will appear immediately when Tagify has focus.</p>
+                    <p>The suggestions are styled as tags this time. Clicking on a suggested it, it will be added to <em>Tagify</em></p>
+                    <details>
+                      <summary></summary>
+                      <h3>HTML</h3>
+<pre class="language-markup"><code><&#8203;input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value='css, html, javascript'>
+</code></pre>
+                      <h3>JAVASCRIPT</h3>
+                      <script>renderPRE(document.currentScript, "dropdown-tags")</script>
+                      <h3>CSS (editable)</h3>
+<style contenteditable>
+.tags-look{
+  padding: .2em;
+}
+
+.tags-look .tagify__dropdown__item{
+  display: inline-block;
+  border-radius: 3px;
+  padding: .3em .5em;
+  border: 1px solid #CCC;
+  background: #F3F3F3;
+  margin: .2em;
+  font-size: .85em;
+  color: black;
+  transition: 0s;
+}
+
+.tags-look .tagify__dropdown__item--active{
+  color: black;
+}
+
+.tags-look .tagify__dropdown__item:hover{
+  background: lightyellow;
+  border-color: gold;
+}
+</style>
+                    </details>
+                </aside>
+                <aside class='rightSide'>
+                    <input name='input-custom-dropdown' class='tagify--custom-dropdown' placeholder='write some tags' value='css, html, javascript'>
+                </aside>
+            </section>
+
             <section id='section-textarea'>
                 <aside class='leftSide'>
                     <h2><a href='#section-textarea'>#</a>textarea</h2>
@@ -404,14 +457,14 @@
                       <script>renderPRE(document.currentScript, "customLook")</script>
                       <h3>CSS (editable)</h3>
 <style contenteditable>.customLook{
-  --tag-bg: #0052BF;
-  --tag-hover: #CE0078;
-  --tag-text-color: #FFF;
-  --tags-border-color: silver;
-  --tag-text-color--edit: #111;
-  --tag-remove-bg: var(--tag-hover);
-  --tag-pad: .6em 1em;
-  --tag-inset-shadow-size: 1.3em;
+  --tag-bg                  : #0052BF;
+  --tag-hover               : #CE0078;
+  --tag-text-color          : #FFF;
+  --tags-border-color       : silver;
+  --tag-text-color--edit    : #111;
+  --tag-remove-bg           : var(--tag-hover);
+  --tag-pad                 : .6em 1em;
+  --tag-inset-shadow-size   : 1.3em;
   --tag-remove-btn-bg--hover: black;
 
   display: inline-block;
@@ -427,8 +480,22 @@
   border-radius: 25px;
 }
 
+/* Do not show the "remove tag" (x) button when only a single tag remains */
 .customLook .tagify__tag:only-of-type .tagify__tag__removeBtn{
   display: none;
+}
+
+.customLook .tagify__tag__removeBtn{
+  opacity: 0;
+  transform: translateX(-6px) scale(.5);
+  margin-left: -3ch;
+  transition: .12s;
+}
+
+.customLook .tagify__tag:hover .tagify__tag__removeBtn{
+  transform: none;
+  opacity: 1;
+  margin-left: -1ch;
 }
 
 .customLook + button{
@@ -804,6 +871,7 @@ new Tagify(input)
 </script>
 
 
+
 <script data-name="input">
 (function(){
 
@@ -867,7 +935,7 @@ function onInput(e){
             // replace tagify "whitelist" array values with new values (result)
             tagify.settings.whitelist.splice(0, result.length, ...result)
             // render the suggestions dropdown. "newValue" is when "input" event is called while editing a tag
-            tagify.dropdown.show.call(tagify, e.detail.data.value);
+            tagify.dropdown.show.call(tagify, e.detail.value);
         })
 }
 
@@ -904,6 +972,24 @@ function onDropdownSelect(e){
 })()
 </script>
 
+
+<script data-name="dropdown-tags">
+(function(){
+
+var input = document.querySelector('input[name="input-custom-dropdown"]'),
+    // init Tagify script on the above inputs
+    tagify = new Tagify(input, {
+      whitelist: ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
+      maxTags: 10,
+      dropdown: {
+        maxItems: 20,           // <- mixumum allowed rendered suggestions
+        classname: "tags-look", // <- custom classname for this dropdown, so it could be targeted
+        enabled: 0,             // <- show suggestions on focus
+        closeOnSelect: false    // <- do not hide the suggestions dropdown once an item has been selected
+      }
+    })
+})()
+</script>
 
 <script data-name="manualSuggestions">
 (function(){
@@ -1128,7 +1214,6 @@ var tagify = new Tagify(document.querySelector('input[name=tags3-1]'), {
     delimiters : null,
     templates : {
         tag : function(v, tagData){
-            console.log(tagData)
             try{
             // _ESCAPE_START_
                 return `<tag title='${v}' contenteditable='false' spellcheck="false" class='tagify__tag ${tagData.class ? tagData.class : ""}' ${this.getAttributes(tagData)}>
