--- a/index.html
+++ b/index.html
@@ -167,8 +167,6 @@
             .disabled tags + input,
             .disabled tags + textarea{ display:block !important; width:100%; padding:6px; border:1px inset; }
 
-
-
             /* .tagify.readonlyMix > tag:not([readonly]) div::before{ background:#d3e2e2; } */
 
             .tagify__input .borderd-blue > div::before{ border:2px solid #8DAFFA; }
@@ -325,6 +323,8 @@
                 </aside>
             </section>
 
+
+
             <section id='section-input'>
                 <aside class='leftSide'>
                     <h2><a href='#section-input'>#</a>text input</h2>
@@ -368,19 +368,21 @@
                 </aside>
             </section>
 
-              <section id='section-dropdown-tags'>
-                <aside class='leftSide'>
-                    <h3>Same using custom suggestions:</h3>
-                    <p>The dropdown will appear immediately when Tagify has focus.</p>
-                    <p>The suggestions are styled as tags this time. Clicking on a suggested it, it will be added to <em>Tagify</em></p>
-                    <details>
-                      <summary></summary>
-                      <h3>HTML</h3>
+
+
+            <section id='section-dropdown-tags'>
+              <aside class='leftSide'>
+                  <h3>Same using custom suggestions:</h3>
+                  <p>The dropdown will appear immediately when Tagify has focus.</p>
+                  <p>The suggestions are styled as tags this time. Clicking on a suggested it, it will be added to <em>Tagify</em></p>
+                  <details>
+                    <summary></summary>
+                    <h3>HTML</h3>
 <pre class="language-markup"><code><&#8203;input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value='css, html, javascript'>
 </code></pre>
-                      <h3>JAVASCRIPT</h3>
-                      <script>renderPRE(document.currentScript, "dropdown-tags")</script>
-                      <h3>CSS (editable)</h3>
+                    <h3>JAVASCRIPT</h3>
+                    <script>renderPRE(document.currentScript, "dropdown-tags")</script>
+                    <h3>CSS (editable)</h3>
 <style contenteditable>
 .tags-look{
   padding: .2em;
@@ -414,6 +416,8 @@
                 </aside>
             </section>
 
+
+
             <section id='section-textarea'>
                 <aside class='leftSide'>
                     <h2><a href='#section-textarea'>#</a>textarea</h2>
@@ -435,6 +439,8 @@
                     <textarea name='tags2' placeholder='Movie names'>The Matrix, Pulp Fiction, Mad Max</textarea>
                 </aside>
             </section>
+
+
 
             <section id='customLook'>
                 <aside class='leftSide'>
@@ -863,6 +869,7 @@
 
 <script data-name="basic">
 (function(){
+// The DOM element you wish to replace with Tagify
 var input = document.querySelector('input[name=basic]');
 
 // init Tagify script on the above inputs
@@ -874,7 +881,6 @@ new Tagify(input)
 
 <script data-name="input">
 (function(){
-
 var input = document.querySelector('input[name=input]'),
     whitelist = ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
 
@@ -927,6 +933,8 @@ function onRemoveTag(e){
 // on character(s) added/removed (user is typing/deleting)
 function onInput(e){
     console.log("onInput: ", e.detail);
+    tagify.settings.whitelist.length = 0; // reset current whitelist
+    tagify.loading(true).dropdown.hide.call(tagify) // show the loader animation
 
     // get new whitelist from a delayed mocked request (Promise)
     mockAjax()
@@ -935,7 +943,7 @@ function onInput(e){
             // replace tagify "whitelist" array values with new values (result)
             tagify.settings.whitelist.splice(0, result.length, ...result)
             // render the suggestions dropdown. "newValue" is when "input" event is called while editing a tag
-            tagify.dropdown.show.call(tagify, e.detail.value);
+            tagify.loading(false).dropdown.show.call(tagify, e.detail.value);
         })
 }
 
