- fix bug with mixed-mode dropdown not removed when Tagify de-focus - Changes to "autoComplete" setting. added "rightKey" sub-setting - when dropdown is shown, pressing ESC key should not create a new tag, but only hide the dropdown - improve the auto-comeplete setting with sub-settings for "enter" & "right" keys functionality (issue #103)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
           p{ line-height:1.4; }
-          code{ padding:2px 3px; background:lightyellow; }
+          code{ padding:2px 5px; background:lightyellow; border-radius:8px; }
           pre code{ background:none; padding:0; }
 
           body :not(pre)>code[class*=language-], body pre[class*=language-]{ background:white; }
