--- a/index.html
+++ b/index.html
@@ -616,17 +616,17 @@
                     <h3>JAVASCRIPT</h3>
                     <script>renderPRE(document.currentScript, "manualSuggestions")</script>
                     <h3>CSS</h3>
-<style contenteditable>.customSuggestionsList{
+<style contenteditable>.customSuggestionsList > div{
   max-height: 300px;
-  overflow: auto;
   border: 2px solid pink;
+  overflow: auto;
 }
 </style>
                     </details>
                 </aside>
                 <aside class='rightSide'>
                     <input name='tags-manual-suggestions' placeholder='write some tags'>
-                    <h3>Please select from the list:</h3>
+                    <h3>☝ Add items from below list:</h3>
                 </aside>
             </section>
 
