--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
                     <span class='key'>tag-invalid-bg</span>
                     <input type='color' name='tag-invalid-color' value="#D39494" />
                 </div>
+
+                <div>
+                    <span class='key'>loader-size</span>
+                    <input type="range" name="loader-size" data-units='em' style='flex:1' min="0.1" max="1.4" step="0.05" value="auto">
+                </div>
             </div>
         </header>
 
@@ -786,7 +791,7 @@
                 <aside class='leftSide'>
                     <h2><a href='#section-mode-select'>#</a>single-value select</h2>
                     <p>
-                        Similar to native <code>&lt;Select&gt;</code> element, but allows free text as value, if
+                        Similar to native <code>&lt;Select&gt;</code> element, but allows free text as value.
                     </p>
                     <details>
                       <summary></summary>
