- changes to how the focus and dropdown reacts when clicking on the component several times in a row (and also on internal children, like a Tag or the input) - minor renaming - removing old code no longer needed

--- a/test/test.html
+++ b/test/test.html
@@ -166,10 +166,12 @@
     var sectionElm = document.querySelector('#section-basic');
 
     new Tagify(sectionElm.querySelector('input[name=value_empty_JSON]'), {
+        addTagOnBlur: false,
         autoComplete : {
             rightKey:true
         },
         dropdown: {
+            enabled: 1,
             mapValueTo: "email"
         },
         whitelist: [
