fixed placeholder in mix-mode not being vertically well-placed

--- a/test/test.html
+++ b/test/test.html
@@ -101,8 +101,8 @@
             </section>
 
             <section id='section-mix'>
-                <textarea name='simple-mix'>[[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
-                <textarea name='mix'>
+                <textarea name='simple-mix' placeholder="type something">[[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
+                <textarea name='mix' placeholder="type something">
                   [[{"id":101, "value":"cartman", "title":"Eric Cartman"}]] and [[{"id":500, "value":"cartman", "title":"xxx"}]] [[kyle]] do not know [[homer simpson]] because he's a relic.]]
                 </textarea>
             </section>
